k8s/consul-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: consul
spec:
  selector:
    matchLabels:
      app: consul
      component: server
  serviceName: consul
  podManagementPolicy: "Parallel"
  replicas: 1
  template:
    metadata:
      labels:
        app: consul
        component: server
    spec:
#      affinity:
#        podAntiAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            - labelSelector:
#                matchExpressions:
#                  - key: app
#                    operator: In
#                    values:
#                      - consul
#              topologyKey: kubernetes.io/hostname
      #      serviceAccountName: consul
      terminationGracePeriodSeconds: 10
      containers:
        - name: consul
          image: consul:latest
          #带在command后的参数
          args:
            - "agent"
            - "-server"
            - "-bootstrap-expect=1"
            - "-ui"
            - "-data-dir=/consul/data"
            - "-bind=0.0.0.0"
            - "-client=0.0.0.0"
            - "-advertise=$(PODIP)"
            - "-retry-join=consul-0.consul.$(NAMESPACE).svc.cluster.local"
#            - "-retry-join=consul-1.consul.$(NAMESPACE).svc.cluster.local"
#            - "-retry-join=consul-2.consul.$(NAMESPACE).svc.cluster.local"
            - "-domain=cluster.local"
            - "-disable-host-node-id"
          volumeMounts:
            - name: data
              mountPath: /consul/data
          ports:
            - containerPort: 8500
              name: ui-port
            - containerPort: 8400
              name: alt-port
            - containerPort: 53
              name: udp-port
            - containerPort: 8443
              name: https-port
            - containerPort: 8080
              name: http-port
            - containerPort: 8301
              name: serflan
            - containerPort: 8302
              name: serfwan
            - containerPort: 8600
              name: consuldns
            - containerPort: 8300
              name: server
      #关联的主机目录，data是一个引用
      volumes:
        - name: data
          hostPath:
            path: /Users/guozexin/Downloads/consul/data
