k8s/consumer-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: consumer
  name: consumer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
        - image: spring-cloud-consumer-demo:0.0.1
          name: spring-cloud-consumer-demo
          ports:
            - containerPort: 9991
