k8s/mysql-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: ibex/debian-mysql-server-5.7
          name: mysql
          ports:
            - containerPort: 3306
