k8s/consumer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: consumer
spec:
  type: NodePort
  ports:
    - port: 9991
      nodePort: 30001
  selector:
    app: consumer
