k8s/ingress-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
  namespace: default
spec:
  rules:
    - host: nginx.itheima.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 4200

    - host: tomcat.jessin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consumer
                port:
                  number: 9991
